Notes-App/K8s/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deploy
  namespace: 3-tier

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: backend-app 

  template:
    metadata:
      labels:
        app: backend-app 

    spec:
      containers:
        - name: backend
          image: sunilchouha/backend-app 
          ports:
          - containerPort: 5000
