Notes-App/K8s/backend-svc.yml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: 3-tier

spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
  - port: 5000
