Notes-App/K8s/nginx-svc.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-svc 
  namespace: 3-tier

spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
  - port: 80
