Notes-App/K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 

metadata:
  name: notes-ingress 
  namespace: 3-tier
  # annotation:
  #   nginx.ingress.kubernetes.io/rewrite-target: /

spec: 
  ingressClassName: nginx
  rules:
  - host: notes.local
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend: 
          service: 
            name: nginx-svc
            port:
              number: 80 
      - path: /api 
        pathType: Prefix
        backend: 
          service:
            name: backend-svc 
            port:
              number: 5000
